[package]
name = "ticket_importer"
version = "0.1.0"
authors = ["Adarah <lucasyharada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["rustls-tls", "json"], default-features=false }
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.32"
structopt = "0.3.18"
calamine = "0.16.2"
base64 = "0.12.3"
serde_json = "1.0.57"
chrono = { version = "0.4.18", features = ["serde"] }
chrono-tz = { version = "0.5.3", features = ["serde"] }
